# doc-app

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: documents.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  compare.py  documents.py  summarize.py  users.py
backend/app/core/: config.py  dependencies.py  security.py  startup.py
backend/app/db/: base.py  models.py  session.py
backend/app/db/crud/: admin_crud.py  chat_crud.py  compare_crud.py  doc_crud.py  user_crud.py
backend/app/db/schemas/: admin.py  chat.py  compare.py  document.py  summary.py  user.py
backend/app/processing/: extract_content.py  pdf_processor.py
backend/app/services/: compare_service.py  document_service.py  rag_pipeline.py  summarizer.py
backend/app/utils/: async_minio.py  qdrant.py
backend/core/: config.py  security.py
backend/db/: base.py  models.py
backend/db/crud/: chat_crud.py  doc_crud.py
backend/db/schemas/: chat.py  user.py
frontend/: .env.example  Dockerfile  README.md  index.html  package.json  vite.config.ts
frontend/src/: .gitignore  App.tsx  INSTALLATION.md  QUICK-START.md  README.md  docker-compose.yml  index.css  index.html  main.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/Dockerfile/: Code-component-3-28.tsx
frontend/src/api/: IMPLEMENTATION.md  README.md
frontend/src/components/: AdminDashboard.tsx  Dashboard.tsx  DocumentChat.tsx  DocumentCompare.tsx  Login.tsx  (+5 more)
(+19 files in other folders)
